--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-hook-form": "^6.8.4",
+    "react-scripts": "3.4.3",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
