--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.4",
-    "react-scripts": "3.4.3",
-    "shortid": "^2.2.15"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
